--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-Hello World!
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device, initial-scale=1.0">
+    <title>Coding Projects</title>
+</head>
+<body>
+    <h1>This is a start to a future!</h1>
+    <p>And the future will be bright and happy</p>
+
+</body>
+</html>
